force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Cruiser</fullName>
            </value>
            <value>
                <fullName>Touring</fullName>
            </value>
            <value>
                <fullName>Sport Touring</fullName>
            </value>
            <value>
                <fullName>Sport Bike</fullName>
            </value>
            <value>
                <fullName>Dual Purpose</fullName>
            </value>
            <value>
                <fullName>Off-road</fullName>
            </value>
            <value>
                <fullName>Scooter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>