force-app/main/default/objects/Product2/fields/Rich_Description__c.field-meta.xml
<CustomField>
    <fullName>Rich_Description__c</fullName>
    <label>Rich Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>