force-app/main/default/objects/Product2/listViews/My_Custom_Products_List.listView-meta.xml
<ListView>
    <fullName>My_Custom_Products_List</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Custom Products List</label>
</ListView>